--- a/kotti_less/base.less
+++ b/kotti_less/base.less
@@ -8,9 +8,9 @@
 
 /* workflow states */
 .state-public {
-  color: #468847;
+  color: @brand-success;
 }
 
 .state-private {
-  color: #B94A48;
+  color: @brand-danger;
 }
